# Imgdiff

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  BUG_FIXES_SUMMARY.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  Imgdiff.py  LICENSE  README.md  README_EN.md  RELEASE_NOTES.md  SECURITY_AUDIT.md  START_IMGDIFF.bat  TODO.md  create_icon.py  pyproject.toml  requirements.txt  tatus
.cursor/rules/: imgdiff_rules.mdc
.github/: SETUP_DEV.md
.github/workflows/: ci.yml  ci.yml.disabled  release.yml
core/: alignment_controls.py  diff_two_color.py  image_alignment.py  slider_reveal.py
imgdiff/: __init__.py  cli.py
imgdiff/core/: __init__.py  colors.py  diff.py  io.py  morph.py  overlay.py
imgdiff/gui/: __init__.py  main.py
tests/: conftest.py  test_core.py  test_diff_two_color.py
